fix - Adding Several Whatsapp API, Adjust AI Inisial Prompt and Knowledge Base
